polskie znaki w dymkach
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@845 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,7 @@
 * tray: po najechaniu mysz± na ikonkê automatycznie dostaje ona focus.
   Rozwi±zuje to problem braku podpowiedzi (hint) z opisem guzików gdy
   Kadu nie jest aktywne (adrian)
+* polskie znaczki w dymkach powinny byæ ju¿ - OK (mast3r)
 
 +++ wersja 0.3.3-rc4
 * dodatkowe opcje dostêpne w menu podrêcznym u¿ytkownika (blokowanie, ignorowanie,
