- + możliwosc wznowienia transmisji plikow.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@850 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-/** TODO, stan na 09/03/2003. **/
+/** TODO, stan na 22/03/2003. **/
 (TODO mo¿e byæ nieaktualne... zapraszamy na kadu.net/forum)
 
 
@@ -38,6 +38,7 @@
  - intelegenta data w oknie rozmowy
  + lepsza ob³uga historii
  ! przyspieszyæ wykrywanie emotikonek
+ + mo¿liwo¶æ wznowienia transmisji plików
 
  
  TODO dla wersji 0.4.0
