poprawka okna about - kde
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@852 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -11,6 +11,7 @@
 * polskie znaczki w dymkach powinny byæ ju¿ - OK (mast3r)
 * nowe libgadu, zwiêkszenie tymczasowo wysoko¶ci okna konfiguracji (chilek)
 * uaktualnione wysy³anie smsów do telefonów komórkowych w sieci era (chilek)
+* poprawka w oknie about - Kadu ju¿ przecie¿ nie bazuje na KDE (adrian)
 
 +++ wersja 0.3.3-rc4
 * dodatkowe opcje dostêpne w menu podrêcznym u¿ytkownika (blokowanie, ignorowanie,
