- zawsze otwiera sie okno czatu niezaleznie od statusu uzytkownika.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@858 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -12,6 +12,7 @@
 * nowe libgadu, zwiêkszenie tymczasowo wysoko¶ci okna konfiguracji (chilek)
 * uaktualnione wysy³anie smsów do telefonów komórkowych w sieci era (chilek)
 * poprawka w oknie about - Kadu ju¿ przecie¿ nie bazuje na KDE (adrian)
+* zawsze otwiera siê okno czatu niezale¿nie od statusu u¿ytkownika (chilek)
 
 +++ wersja 0.3.3-rc4
 * dodatkowe opcje dostêpne w menu podrêcznym u¿ytkownika (blokowanie, ignorowanie,
