- drobne poprawki eksportu i importu listy uzytkownikow do i z pliku.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@871 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -15,6 +15,7 @@
 * zawsze otwiera siê okno czatu niezale¿nie od statusu u¿ytkownika (chilek)
 * kadu dzia³a w unicode, pliki konfiguracyjne w ISO 8859-2, komunikacja z
   serwerami GG w CP1250 (chilek)
+* drobne poprawki eksportu i importu listy u¿ytkowników do i z pliku (chilek)
 
 +++ wersja 0.3.3-rc4
 * dodatkowe opcje dostêpne w menu podrêcznym u¿ytkownika (blokowanie, ignorowanie,
