--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
++++ wersja 0.3.4-pre1
+* 
 +++ wersja 0.3.3-final
 * ikonka wiadomo¶ci i ikon statusu "ukryty" z telefonikiem
   do oddzielnych plików (chilek)
