--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 +++ wersja 0.3.4-pre1
-* ¶rodkowy guzik myszki wci¶niêty na u¿ytkowniku otwiera okno wysy³ania smsa (chilek)
+* ¶rodkowy guzik myszki wci¶niêty na u¿ytkowniku
+  otwiera okno wysy³ania smsa (chilek)
+* pierwsza próbna wersja animowanych emotikonów (adrian)
 
 +++ wersja 0.3.3-final
 * ikonka wiadomo¶ci i ikon statusu "ukryty" z telefonikiem
