- ladowanie pliku emoticons_selector w standardzie ISO-8859-2
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@885 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 * ¶rodkowy guzik myszki wci¶niêty na u¿ytkowniku
   otwiera okno wysy³ania smsa (chilek)
 * pierwsza próbna wersja animowanych emotikonów (adrian)
+* ³adowanie pliku emoticons_selector w standardzie ISO-8859-2 (chilek)
 
 +++ wersja 0.3.3-final
 * ikonka wiadomo¶ci i ikon statusu "ukryty" z telefonikiem
