--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
   otwiera okno wysy³ania smsa (chilek)
 * pierwsza próbna wersja animowanych emotikonów (adrian)
 * ³adowanie pliku emoticons_selector w standardzie ISO-8859-2 (chilek)
+* poprawka zachowania animowanych emotikonów przy
+  zawijaniu tekstu i wstêpna optymalizacja (adrian)
 
 +++ wersja 0.3.3-final
 * ikonka wiadomo¶ci i ikon statusu "ukryty" z telefonikiem
