make install - css dokumentacji
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@892 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,7 @@
   formatu (chilek)
 * trochê porz±dków: config.cpp/h => config_dialog.cpp/h, struktura config
   z kadu.h do config_dialog.h, usun±³em vuser.cpp/h (adrian)
+* make install instaluje style css od dokumentacji (adrian)
 
 +++ wersja 0.3.3-final
 * ikonka wiadomo¶ci i ikon statusu "ukryty" z telefonikiem
