lista wlasnych serwerow nie znika
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@897 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -16,6 +16,7 @@
   EmoticonSelector,EmoticonSelectorButton w emoticons.cpp/h (adrian)
 * porz±dki: rozbijanie kadu.cpp/h, przenoszenie kodu w bardziej
   odpowiednie miejsca (adrian)
+* lista w³asnych serwerów nie znika po ustawieniu domy¶lnych serwerów (mast3r)
 
 +++ wersja 0.3.3-final
 * ikonka wiadomo¶ci i ikon statusu "ukryty" z telefonikiem
