--- a/ChangeLog
+++ b/ChangeLog
@@ -17,6 +17,8 @@
 * porz±dki: rozbijanie kadu.cpp/h, przenoszenie kodu w bardziej
   odpowiednie miejsca (adrian)
 * lista w³asnych serwerów nie znika po ustawieniu domy¶lnych serwerów (mast3r)
+* osoby nie maj±ce uin, opisem jest: Mobile: nr_telefonu
+  + info o 3 klawiszu, aby wys³aæ sms (mast3r)
 
 +++ wersja 0.3.3-final
 * ikonka wiadomo¶ci i ikon statusu "ukryty" z telefonikiem
