--- a/ChangeLog
+++ b/ChangeLog
@@ -28,6 +28,8 @@
   dzia³aæ. Standardowo zestaw gadu-gadu z najnowszej wersji oryginalnego
   klienta. Zestawy kadubis i original_kadu usuniête. Przy okazji wysz³a
   szybsza detekcja emotów w tek¶cie - nie ma ju¿ regexpów (adrian)
+* zamiast zwyk³ego w³±czania/wy³±czania emotikonów mo¿liwo¶æ ustawienia
+  w oknie konfiguracji stylu emotikonów: brak/statyczne/animowane (adrian)
 
 +++ wersja 0.3.3-final
 * ikonka wiadomo¶ci i ikon statusu "ukryty" z telefonikiem
