--- a/ChangeLog
+++ b/ChangeLog
@@ -30,6 +30,8 @@
   szybsza detekcja emotów w tek¶cie - nie ma ju¿ regexpów (adrian)
 * zamiast zwyk³ego w³±czania/wy³±czania emotikonów mo¿liwo¶æ ustawienia
   w oknie konfiguracji stylu emotikonów: brak/statyczne/animowane (adrian)
+* poprawka rozpoznawania adresów w tek¶cie. poprawka algorytmu dla d³u¿szych
+  napisów oraz rozpoznaje dodatkowo znaki ':','%' i '+' (adrian)
 
 +++ wersja 0.3.3-final
 * ikonka wiadomo¶ci i ikon statusu "ukryty" z telefonikiem
