selektor emotow nie wystaje
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@909 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -30,8 +30,10 @@
   szybsza detekcja emotów w tek¶cie - nie ma ju¿ regexpów (adrian)
 * zamiast zwyk³ego w³±czania/wy³±czania emotikonów mo¿liwo¶æ ustawienia
   w oknie konfiguracji stylu emotikonów: brak/statyczne/animowane (adrian)
-* poprawka rozpoznawania adresów w tek¶cie. poprawka algorytmu dla d³u¿szych
-  napisów oraz rozpoznaje dodatkowo znaki ':','%' i '+' (adrian)
+* poprawka rozpoznawania adresów url w tek¶cie. poprawka algorytmu dla
+  d³u¿szych napisów oraz rozpoznaje dodatkowo znaki ':','%' i '+' (adrian)
+* selektor emotikonów jest bardziej inteligentny i bardzo
+  siê stara nie wystawaæ poza krawêdzie ekranu (adrian)
 
 +++ wersja 0.3.3-final
 * ikonka wiadomo¶ci i ikon statusu "ukryty" z telefonikiem
