- znaki < i > wyswietlaja sie prawidlowo w widoku opisu uzytkownika.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@912 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -38,6 +38,7 @@
   wprowadzony tekst z obrazka, adresat z nieuaktywnion± us³ug± "sms standard".
   Zamkniêcie okienka z obrazkiem idei - np klawiszem esc - powoduje prawid³owy
   powrót do edycji (adrian)
+* znaki < i > wy¶wietlaj± siê prawid³owo w widoku opisu u¿ytkownika (chilek)
 
 +++ wersja 0.3.3-final
 * ikonka wiadomo¶ci i ikon statusu "ukryty" z telefonikiem
