- historia wyswietla sie tak jak kiedys (z paroma dodatkowymi bajerami), ale wykorzystuje juz nowy format plikow historii.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@913 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -39,6 +39,8 @@
   Zamkniêcie okienka z obrazkiem idei - np klawiszem esc - powoduje prawid³owy
   powrót do edycji (adrian)
 * znaki < i > wy¶wietlaj± siê prawid³owo w widoku opisu u¿ytkownika (chilek)
+* historia wy¶wietla siê tak jak kiedy¶ (z paroma dodatkowymi bajerami), ale wykorzystuje
+   ju¿ nowy format plików historii (chilek)
 
 +++ wersja 0.3.3-final
 * ikonka wiadomo¶ci i ikon statusu "ukryty" z telefonikiem
