--- a/ChangeLog
+++ b/ChangeLog
@@ -41,6 +41,7 @@
 * znaki < i > wy¶wietlaj± siê prawid³owo w widoku opisu u¿ytkownika (chilek)
 * historia wy¶wietla siê tak jak kiedy¶ (z paroma dodatkowymi bajerami), ale wykorzystuje
    ju¿ nowy format plików historii (chilek)
+* porz±dki z czasami zdarzeñ (chilek)
 
 +++ wersja 0.3.3-final
 * ikonka wiadomo¶ci i ikon statusu "ukryty" z telefonikiem
