--- a/ChangeLog
+++ b/ChangeLog
@@ -44,6 +44,8 @@
 * porz±dki z czasami zdarzeñ (chilek)
 * okno rozmowy: gdy otwieramy pojawia siê w nim 10 ostatnich wypowiedzi
    z historii rozmowy (chilek)
+* historie rozmów: optymalizacja obs³ugi historii rozmów - wprowadzenie plików
+   z indeksami wpisów historii (chilek)
 
 +++ wersja 0.3.3-final
 * ikonka wiadomo¶ci i ikon statusu "ukryty" z telefonikiem
