- na razie zablokowalem poprzedni feature.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@945 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -68,6 +68,7 @@
 * pocz±tki porz±dków z oknem historii (chilek)
 * je¶li z kim¶ ju¿ wcze¶niej "rozmawiali¶my" od w³±czenia kadu to nie s±
   cytowane wypowiedzi (chilek)
+* na razie zablokowa³em poprzedni feature (chilek)
 
 +++ wersja 0.3.3-final
 * ikonka wiadomo¶ci i ikon statusu "ukryty" z telefonikiem
