- poprawki w konwersji historii - nick moze zawierac spacje i nie tylko.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@946 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -69,6 +69,7 @@
 * je¶li z kim¶ ju¿ wcze¶niej "rozmawiali¶my" od w³±czenia kadu to nie s±
   cytowane wypowiedzi (chilek)
 * na razie zablokowa³em poprzedni feature (chilek)
+* poprawki w konwersji historii - nick mo¿e zawieraæ spacje i nie tylko (chilek)
 
 +++ wersja 0.3.3-final
 * ikonka wiadomo¶ci i ikon statusu "ukryty" z telefonikiem
