- mozna ignorowac grupy uzytkownikow.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@954 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -70,6 +70,7 @@
   cytowane wypowiedzi (chilek)
 * na razie zablokowa³em poprzedni feature (chilek)
 * poprawki w konwersji historii - nick mo¿e zawieraæ spacje i nie tylko (chilek)
+* mo¿na ignorowaæ grupy u¿ytkowników (chilek)
 
 +++ wersja 0.3.3-final
 * ikonka wiadomo¶ci i ikon statusu "ukryty" z telefonikiem
